# tenantforge

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  config.py  database.py  docker-compose.yml  logSetup.py  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 060c64b471bb_create_users.py  f3b1ebe855c0_create_tenants.py
backend/app/: database.py  main.py
backend/app/api/v1/: health.py
backend/app/core/: settings.py
backend/app/db/: base.py  database.py  mixins.py
backend/app/models/: tenant.py  user.py
backend/app/schemas/: user.py
